# Data-Lab

./: .editorconfig  .gitignore  ALL_FIXES_COMPLETE.md  CI_LINT_SOLUTION.md  DOCKER_BUILD_FIX.md  FINAL_FIXES_SUMMARY.md  IMPORT_SORT_FIX.md  LICENSE  LINT_FIXES.md  MCP_MANAGER_COMPLETE.md  PROMPT2_SUMMARY.md  PROMPT3_SUMMARY.md  PROMPT4_SUMMARY.md  PROMPT5_SUMMARY.md  README.md  README_RUFF_FIX.md  RUFF_ERROR_FINAL_FIX.md  SETUP_INSTRUCTIONS.md  TYPECHECK_FIX.md  requirements.txt
backend/: .env.example  FIX_RUFF_IN_CI.sh  README.md  check-lint.sh  pyproject.toml
backend/alembic/: env.py
backend/apps/: __init__.py
backend/apps/connectors/: __init__.py  base.py  impl_graphql.py  impl_mongodb.py  impl_postgres.py  impl_rest.py  impl_s3.py  metrics.py  registry.py  repo.py  resilience.py  router.py  service.py
backend/apps/core/: __init__.py  auth.py  config.py  crypto.py  db.py  deps.py  security.py
backend/apps/core/models/: __init__.py  _types.py  datasource.py  mcp_server.py  membership.py  organization.py  policy.py  tool.py  user.py
backend/apps/core/routers/: health.py
backend/apps/core/schemas/: __init__.py  auth.py  datasource.py  mcp.py
backend/apps/mcp/: __init__.py  ratelimit.py  router.py  service.py
backend/tests/: __init__.py  conftest.py  test_auth_multitenant.py  test_connectors_integration.py  test_connectors_metrics.py  test_connectors_registry.py  test_connectors_resilience.py  test_datasource_connectivity.py  test_datasource_crud.py  test_datasource_crypto.py  test_health.py  test_mcp_invoke.py  test_mcp_server_crud.py  test_mcp_tool_crud.py
docs/: architecture.md  auth-implementation.md  decisions.md  getting-started.md  security.md
web/: .env.example  README.md  (+7 more)
(+24 files in other folders)
